# opayai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  demo.md  opayai-pitch.html  pyproject.toml
.cursor/: mcp.json
.cursor/rules/: opayai.mdc
backend/app/: __init__.py  api.py  crypto.py  ledger.py  main.py  mcp_server.py  merchant.py  models.py  policy.py  seed.py  service.py  store.py
contracts/: README.md  http-api.md  mandateloop.schema.json  mcp-tools.md  opayai.schema.json
contracts/fixtures/: demo-state.json
docs/: DEMO.md  PITCH.md
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  compact.css  main.tsx  style.css
src/opayai/: agent.py  api.py  authorization.py  authstore.py  browser.py  channels.py  cli.py  demo.py  events.py  front_door.py  fulfillment.py  mandate.py  notify.py  orders.py  policy.py  rails.py  recommend.py  server.py  signing.py  stepup.py  types.py  web.py  webhook_sink.py
tests/: conftest.py  test_agent.py  test_authorization.py  test_browser.py  test_channels.py  test_cli.py  test_data.py  test_events.py  test_front_door.py  test_fulfillment.py  test_http_transport.py  test_mandate.py  test_mandateloop_backend.py  test_notify.py  test_opayai_commerce.py  test_orders.py  test_policy.py  test_rails.py  test_recommend.py  test_server.py  test_signing.py  test_stepup.py  test_types.py  test_web.py  test_web_csrf.py
web/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/src/: App.tsx  MobileChat.tsx  api.ts  main.tsx  mobile.css  (+3 more)
(+19 files in other folders)
