[project]
name = "opayai"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "openai-agents>=0.18.2,<1",
    "pydantic>=2.6",
    "pynacl>=1.5",
    "anthropic>=0.40",
    "rich>=13.7",
    "starlette>=0.27",
    "typer>=0.12",
    "uvicorn>=0.31.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opayai"]

[tool.pytest.ini_options]
pythonpath = ["src"]
